# -claude-agent-

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  fix_circular.py  fix_spawn2.py  fix_spawn3.py  reasonix.toml
JChatMind/: README.md
JChatMind/jchatmind/: .gitignore  pom.xml
JChatMind/jchatmind/scripts/: run-backend.ps1
JChatMind/jchatmind/scripts/e2e/: coding-tank-game-e2e.ps1
JChatMind/jchatmind/scripts/mcp/: command-runner.mjs  jchatmind-shell-mcp.mjs  package.json  start-mcp-proxy.ps1
JChatMind/jchatmind/src/main/resources/coding-templates/python-pytest/: pyproject.toml
JChatMind/jchatmind/workspace/jump-game-e2e/: game.js  (+2 more)
JChatMind/ui/: .env.development  README.md  package-lock.json  package.json  vite.config.ts
databasesql/: jchatmind_full_schema.sql
docs/: tool-architecture.md
docs/resume/: 简历模块.md
docs/superpowers/plans/: 2026-06-12-event-model-redesign.md  2026-06-12-mcp-stdio-migration.md  2026-06-12-session-manager.md  2026-06-12-tool-optimization.md
docs/superpowers/specs/: 2026-06-12-context-compression-design.md  2026-06-12-event-model-redesign.md  2026-06-12-mcp-stdio-migration-design.md  2026-06-12-session-manager-design.md  2026-06-12-tool-optimization-design.md  2026-06-13-jsonrpc-websocket-design.md
jchatmind_v2/__MACOSX/jchatmind_assert/: ._jchatmind.sql
jchatmind_v2/jchatmind_assert/: coding_task.sql  coding_task_workspace_root.sql  mcp_call_log.sql  memory_hub.sql  memory_hub_migration.sql
scripts/mcp/: command-runner.smoke.mjs  command-runner.test.mjs  package-lock.json  start-mcp-proxy.ps1  win-cli-mcp.config.json
(+409 files in other folders)
