[project]
name = "coding-starter"
version = "0.1.0"
description = "JChatMind Python pytest starter"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
